--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: helloToSomeone
 Title: Hello Package
 Version: 0.0.0.9000
 Authors@R: person("Akira", "Matsui", email = "159e112e@stu.kobe-u.ac.jp", role = c("aut", "cre"))
-Description: say helllo to a person
+Description: This is a test package to say helllo to a person.
 Depends: R (>= 3.3.3)
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests: testthat
